--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -7,7 +7,7 @@
     = csrf_meta_tags
   %body
 
+  = render "shared/navigation_bar"
   = render "shared/errors_and_notices"
-  = render "shared/user_navigation"
 
   = yield
