--- a/app/views/shared/_navigation_bar.html.haml
+++ b/app/views/shared/_navigation_bar.html.haml
@@ -1,4 +1,5 @@
 = link_to "Home", root_path
+= link_to "Book Now", appointments_path
 = link_to "Meet", meet_path
 = link_to "FAQ", faq_path
 - if current_user
