--- a/app/views/appointments/index.html.haml
+++ b/app/views/appointments/index.html.haml
@@ -1,6 +1,11 @@
 - @appointments.each_with_index do |appt, index|
-  %p
-    = "Appointment ##{index}:"
-    = "#{appt.start_time} TO #{appt.end_time}"
-    = "Reserved" if appt.future?
-    = "Available" if appt.open?
+  - if appt.open?
+    = form_for appt do |f|
+      = "ID #{appt.id}:"
+      = "#{appt.display_local_start_time} TO #{appt.display_local_end_time}"
+      = f.submit "Reserve!"
+  - else
+    %p
+      = "ID #{appt.id}:"
+      = "#{appt.display_local_start_time} TO #{appt.display_local_end_time}"
+      = "Booked"
