--- a/app/views/shared/_errors_and_notices.html.haml
+++ b/app/views/shared/_errors_and_notices.html.haml
@@ -1,13 +1,22 @@
 - flash[:errors] ||= []
 #errors_and_notices
   - flash[:errors].each do |error|
-    %p.error-msg
-      = error
+    %div.alert.alert-danger.alert-dismissible
+      %button{:type => "button", :class=> "close", "data-dismiss" => "alert"}
+        %span{"aria-hidden" => true}
+          &times;
+      %p= error
 
   - if flash[:notice]
-    %p.notice-msg
-      = flash[:notice]
+    %div.alert.alert-success.alert-dismissible
+      %button{:type => "button", :class=> "close", "data-dismiss" => "alert"}
+        %span{"aria-hidden" => true}
+          &times;
+      %p= flash[:notice]
 
   - if flash[:alert]
-    %p.alert-msg
-      = flash[:alert]
+    %div.alert.alert-danger.alert-dismissible
+      %button{:type => "button", :class=> "close", "data-dismiss" => "alert"}
+        %span{"aria-hidden" => true}
+          &times;
+      %p= flash[:alert]
