appointments index each appointment form is no longer remotebc we are no longer rendering modals

--- a/app/views/appointments/index.html.haml
+++ b/app/views/appointments/index.html.haml
@@ -1,6 +1,6 @@
 - @appointments.each_with_index do |appt, index|
   - if appt.open?
-    = form_for appt, remote: true do |f|
+    = form_for appt do |f|
       = "ID #{appt.id}:"
       = "#{appt.display_local_start_time} TO #{appt.display_local_end_time}"
       = f.submit "Reserve!"
