--- a/app/views/users/_auth_modal.html.haml
+++ b/app/views/users/_auth_modal.html.haml
@@ -1,26 +1,57 @@
 #modal-window.modal.fade
-  = render "shared/errors_and_notices"
   .modal-dialog
+
     .modal-content
-      .modal-header
-        %button{ :type => "button", class: "close", "data-dismiss" => "modal" }
-          %span{ "aria-hidden" => true }
-            &times;
-          %span{ class: "sr-only" }
-            Close
-        %h4{ class: "modal-title" }
-          = "#{@appointment.description}"
-      .modal-body
-        Log In
-        = form_for(:user, remote: true, as: :user, url: session_path(:user)) do |f|
-          = hidden_field(:user, :appointment_id, value: @appointment_id)
-          = f.label :email
-          = f.email_field :email, autofocus: true
-          = f.label :password
-          = f.password_field :password, autocomplete: "off"
-          = f.submit "Log in"
-          / = render "users/shared/links"
-      .modal-footer
-        %p OR
-        %button{ type: "button", class: "btn btn-primary"}
-          Create an account
+      = form_for @appointment, remote: true do |f|
+        .modal-header
+          %button{ :type => "button", class: "close", "data-dismiss" => "modal" }
+            %span{ "aria-hidden" => true }
+              &times;
+            %span{ class: "sr-only" }
+              Close
+          %h4{ class: "modal-title" }
+            = "#{@appointment.description}"
+
+        .modal-body
+          %p To book this appointment, please:
+
+          .auth.register
+            = "Sign up for an account"
+            %br
+            - if @new_user
+              .alert.alert-danger
+                - @new_user.errors.full_messages.each do |message|
+                  = message
+            = fields_for :new_user do |a|
+              = a.text_field :first_name, placeholder: "First Name"
+              = a.text_field :email, placeholder: "Email Address"
+              %br
+              = a.password_field :password, placeholder: "Password"
+              = a.password_field :password_confirmation, placeholder: "Retype Password"
+              %br
+              = a.text_field :city, placeholder: "City"
+              = a.text_field :country, placeholder: "Country"
+              = a.number_field :age, placeholder: "Age"
+
+          .auth.sign-in
+            = "Log In"
+            %br
+            - if params[:user]
+              .alert.alert-danger
+                Incorrect email address or password.
+            = fields_for :user do |a|
+              = a.text_field :email, placeholder: "Email Address"
+              %br
+              = a.password_field :password, placeholder: "Password"
+            %br
+            = link_to "Forgot password?", new_user_password_path
+
+        .modal-footer
+          .auth.register
+            = f.submit "Sign up", class: %w[ btn btn-primary ]
+            = '-or-'.html_safe
+            %a.toggle{ href: "#" } Log in
+          .auth.sign-in
+            = f.submit "Log in", class: %w[ btn btn-primary ]
+            = '-or-'.html_safe
+            %a.toggle{ href: "#" } Sign up
