--- a/app/views/appointments/_confirm_modal.html.haml
+++ b/app/views/appointments/_confirm_modal.html.haml
@@ -1,16 +1,16 @@
 #modal-window.modal.fade
   .modal-dialog
     .modal-content
-      .modal-header
-        %button{ :type => "button", class: "close", "data-dismiss" => "modal" }
-          %span{ "aria-hidden" => true }
-            &times;
-          %span{ class: "sr-only" }
-            Close
-        %h4{ class: "modal-title" }
-          = "Book Now"
-      .modal-body
-        = form_for :charge do
+      = form_tag charges_path do
+        .modal-header
+          %button{ :type => "button", class: "close", "data-dismiss" => "modal" }
+            %span{ "aria-hidden" => true }
+              &times;
+            %span{ class: "sr-only" }
+              Close
+          %h4{ class: "modal-title" }
+            = "Book Now"
+        .modal-body
           %h6
             Appointment Details
             %ul
@@ -18,5 +18,5 @@
               %li= "Start Time: #{@appointment.display_local_start_time}"
               %li= "Instructor: #{@appointment.instructor.full_name}"
               %li= "#{@appointment.display_price}"
-      .modal-footer
-        %script{ class: "stripe-button", :src => "https://checkout.stripe.com/checkout.js", "data-key" => "#{Rails.configuration.stripe[:publishable_key]}", "data-description" => "#{@appointment.appointment_category.name}", "data-amount" => "#{@appointment.price_in_cents}"}
+        .modal-footer
+          %script{ class: "stripe-button", :src => "https://checkout.stripe.com/checkout.js", "data-key" => "#{Rails.configuration.stripe[:publishable_key]}", "data-description" => "#{@appointment.appointment_category.name}", "data-amount" => "#{@appointment.price_in_cents}"}
