rename overlap_exists in appointments to just be called generic unbookable, since it will show all errors in appointment saving

--- a/app/views/appointments/_unbookable.html.haml
+++ b/app/views/appointments/_unbookable.html.haml
@@ -10,6 +10,7 @@
         %h4{ class: "modal-title" }
           = "#{@appointment.description}"
       .modal-body
-        .alert.alert-danger
-          = @error
+        - @errors.each do |error|
+          .alert.alert-danger
+            = error
       .modal-footer
