appointment#display_paid_date, used in appointments#show

--- a/app/views/appointments/show.html.haml
+++ b/app/views/appointments/show.html.haml
@@ -1,1 +1,2 @@
-%p= @appointment.user.first_name
+%p= @appointment.description
+%p= "#{@appointment.display_price} paid on #{@appointment.display_paid_date}"
