--- a/app/views/devise/registrations/edit.html.haml
+++ b/app/views/devise/registrations/edit.html.haml
@@ -1,4 +1,4 @@
-%h2= "Edit #{resource_name.to_s.humanize}"
+%h2= "Update Your Profile"
 
 = form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f|
   - devise_error_messages!
@@ -20,6 +20,61 @@
     = f.password_field :password_confirmation, autocomplete: "off"
 
   %div
+    = f.label :first_name
+    %br
+    = f.text_field :first_name
+
+  %div
+    = f.label :last_name
+    %br
+    = f.text_field :last_name
+
+  %div
+    = f.label :age
+    %br
+    = f.number_field :age
+
+  %div
+    = f.label :gender
+    %br
+    = f.select :gender, resource.gender_options
+
+  %div
+    = f.label :city
+    %br
+    = f.text_field :city
+
+  %div
+    = f.label :state
+    %br
+    = f.text_field :state
+
+  %div
+    = f.label :zip
+    %br
+    = f.text_field :zip
+
+  %div
+    = f.label :country
+    %br
+    = f.text_field :country
+
+  %div
+    = f.label :skill_level
+    %br
+    = f.select :skill_level, resource.skill_level_options
+
+  %div
+    = f.label :musical_genre
+    %br
+    = f.select :musical_genre, resource.musical_genre_options
+
+  %div
+    = f.label :years_playing
+    %br
+    = f.select :years_playing, resource.years_playing_options
+
+  %div
     = f.label :current_password
     %i (we need your current password to confirm your changes)
     %br
@@ -30,7 +85,8 @@
 
 %h3 Cancel my account
 
-%p Unhappy?
+%p
+  Unhappy?
   = button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete
 
 = link_to "Back", :back
