add accepts_age_agreement checkbox to registrations new

--- a/app/views/devise/registrations/new.html.haml
+++ b/app/views/devise/registrations/new.html.haml
@@ -41,6 +41,11 @@
     = f.number_field :age
 
   %div
+    = f.label :accepts_age_agreement, "By checking this box, you certify that you are over the age of 18."
+    %br
+    = f.check_box :accepts_age_agreement
+
+  %div
     = f.submit "Sign up"
 
 = render "devise/shared/links"
