--- a/app/views/shared/_navigation_bar.html.haml
+++ b/app/views/shared/_navigation_bar.html.haml
@@ -7,6 +7,7 @@
   = link_to "Instructor Dashboard", rails_admin_path if current_user.instructor?
   = link_to "Admin Dashboard", rails_admin_path if current_user.admin?
   = link_to "Profile", edit_user_registration_path if current_user.student?
+  = link_to "Student Dashboard", student_dashboard_path if current_user.student?
   = link_to "Log Out", destroy_user_session_path, method: :delete
 - else
   = link_to "Sign Up", new_user_registration_path
