users/_auth_modal adds accepts_age_agreement

--- a/app/views/users/_auth_modal.html.haml
+++ b/app/views/users/_auth_modal.html.haml
@@ -32,6 +32,9 @@
               = a.text_field :city, placeholder: "City"
               = a.text_field :country, placeholder: "Country"
               = a.number_field :age, placeholder: "Age"
+              %br
+              = a.check_box :accepts_age_agreement
+              = a.label :accepts_age_agreement, "By checking this box, you certify that you are over the age of 18."
 
           .auth.sign-in
             = "Log In"
