--- a/app/views/devise/registrations/new.html.haml
+++ b/app/views/devise/registrations/new.html.haml
@@ -26,6 +26,12 @@
     = f.text_field :first_name
 
   %div
+    = f.label :profile_photo
+    %br
+    = f.file_field :profile_photo
+    = f.hidden_field :profile_photo_cache
+
+  %div
     = f.label :city
     %br
     = f.text_field :city
