--- a/app/views/devise/registrations/edit.html.haml
+++ b/app/views/devise/registrations/edit.html.haml
@@ -30,7 +30,7 @@
 
   %div
     = f.label :profile_photo
-    = image_tag resource.profile_photo.url
+    = image_tag resource.profile_photo.thumb.url
     %br
     = f.file_field :profile_photo
     = f.hidden_field :profile_photo_cache
