--- a/app/views/users/_auth_modal.html.haml
+++ b/app/views/users/_auth_modal.html.haml
@@ -30,7 +30,7 @@
               = a.password_field :password_confirmation, placeholder: "Retype Password"
               %br
               = a.text_field :city, placeholder: "City"
-              = a.text_field :country, placeholder: "Country"
+              = country_select(:new_user, :country, { priority_countries: ["US"], prompt: "Country"} )
               = a.number_field :age, placeholder: "Age"
               %br
               = a.check_box :accepts_age_agreement
