lesson_materials partial handles if current_user has none

--- a/app/views/users/_lesson_materials.html.haml
+++ b/app/views/users/_lesson_materials.html.haml
@@ -1,3 +1,6 @@
 %h6 Lesson Materials
-- @materials.each do |mat|
-  = link_to mat.name, mat.attachment.url
+- if @materials.empty?
+  You have no lesson materials.
+- else
+  - @materials.each do |mat|
+    = link_to mat.name, mat.attachment.url
