--- a/app/views/users/_lesson_materials.html.haml
+++ b/app/views/users/_lesson_materials.html.haml
@@ -6,4 +6,11 @@
     - lesson_material = sm.lesson_material
     %h5= lesson_material.name
     %p= lesson_material.description
-    = link_to "Quick View", lesson_material.attachment.url, class: "btn btn-info btn-xs"
+    = link_to "Quick Download", lesson_material.attachment.url, class: "btn btn-info"
+    %h6= "Instructor Message: #{sm.instructor_notes}"
+    = form_for sm do |f|
+      = f.label :student_notes, "add/edit your own notes"
+      %br
+      = f.text_area :student_notes
+      %br
+      = f.submit "Save", class: "btn btn-success btn-xs"
