--- a/app/views/shared/_navigation_bar.html.haml
+++ b/app/views/shared/_navigation_bar.html.haml
@@ -4,11 +4,9 @@
   = nav_link "Meet", meet_path
   = nav_link "FAQ", faq_path
   - if current_user
-    / # = nav_link "Dashboard", accounts_path
-    = nav_link "Instructor Dashboard", rails_admin_path if current_user.instructor?
-    = nav_link "Admin Dashboard", rails_admin_path if current_user.admin?
+    = nav_link "Dashboard", rails_admin_path if (current_user.instructor? || current_user.admin? )
+    = nav_link "Dashboard", student_dashboard_path if current_user.student?
     = nav_link "Profile", edit_user_registration_path if current_user.student?
-    = nav_link "Student Dashboard", student_dashboard_path if current_user.student?
     = nav_link "Log Out", destroy_user_session_path, method: :delete
   - else
     = nav_link "Sign Up", new_user_registration_path
