--- a/app/views/devise/registrations/new.html.haml
+++ b/app/views/devise/registrations/new.html.haml
@@ -16,7 +16,7 @@
     = f.password_field :password, autocomplete: "off"
 
   %div
-    = f.label :password_confirmation
+    = f.label :password_confirmation, "Retype Password"
     %br
     = f.password_field :password_confirmation, autocomplete: "off"
 
@@ -24,12 +24,6 @@
     = f.label :first_name
     %br
     = f.text_field :first_name
-
-  %div
-    = f.label :profile_photo
-    %br
-    = f.file_field :profile_photo
-    = f.hidden_field :profile_photo_cache
 
   %div
     = f.label :city
