--- a/app/views/devise/registrations/new.html.haml
+++ b/app/views/devise/registrations/new.html.haml
@@ -1,5 +1,4 @@
-%h2 Sign up
-
+%h2 create an account
 = form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f|
   - devise_error_messages!
 
@@ -47,5 +46,4 @@
 
   %div
     = f.submit "Sign up"
-
 = render "devise/shared/links"
