--- a/app/views/shared/_sign_in_dropdown.html.haml
+++ b/app/views/shared/_sign_in_dropdown.html.haml
@@ -2,17 +2,20 @@
   %a{ class: "dropdown-toggle", "data-toggle" => "dropdown", href: "#", role: "button", "aria-expanded" => false}
     Log In / Sign Up
     %span{class: "caret"}
-  %ul{ class: "dropdown-menu", role: "menu" }
+  %ul{ class: "dropdown-menu has-form", role: "menu" }
     = form_for(resource, as: resource_name, url: session_path(resource_name), html: { id: "login_nav_bar" }) do |f|
-      %div
-        = f.label :email
-        %br
-        = f.email_field :email, autofocus: true, id: "email_login_navbar"
 
-      %div
-        = f.label :password
-        %br
-        = f.password_field :password, autocomplete: "off", id: "password_login_navbar"
+      .input-group
+        = f.label :email, class: "sr-only"
+        %span{ class: "input-group-addon", id: "email_addon_login"}
+          %span{ class: "glyphicon glyphicon-envelope"}
+        = f.email_field :email, autofocus: true, placeholder: "email", class: "form-control", id: "email_login_navbar", "aria-describedby" => "email_addon_login"
+
+      .input-group
+        = f.label :password, class: "sr-only"
+        %span{ class: "input-group-addon", id: "password_addon_login"}
+          %span{ class: "glyphicon glyphicon-lock"}
+        = f.password_field :password, autocomplete: "off", placeholder: "password", class: "form-control", id: "password_login_navbar", "aria-describedby" => "password_addon_login"
 
       - if devise_mapping.rememberable?
         %div
@@ -20,7 +23,7 @@
           = f.label :remember_me
 
       %div
-        = f.submit "Log in"
+        = f.submit "Log in", class: "btn btn-primary"
       %br
       = link_to "Forgot your password?", new_password_path(resource_name)
       %br
