--- a/app/views/shared/_navigation_bar.html.haml
+++ b/app/views/shared/_navigation_bar.html.haml
@@ -6,7 +6,7 @@
         %span{ class: "icon-bar" }
         %span{ class: "icon-bar" }
         %span{ class: "icon-bar" }
-      = link_to "guitar lessons", root_path, class: "navbar-brand"
+      = link_to "Guitar Lessons", root_path, class: "navbar-brand"
     #site-nav.collapse.navbar-collapse
       %ul.nav.navbar-nav.nav-pills.pull-right
         = nav_link "Book Now", appointments_path
