--- a/app/assets/stylesheets/overrides.css.scss
+++ b/app/assets/stylesheets/overrides.css.scss
@@ -6,3 +6,9 @@ $navbar-default-link-color: #0EC95C;
 $navbar-default-link-hover-color: lighten($navbar-default-link-color, 30.0%);
 $navbar-default-brand-hover-color: $navbar-default-link-hover-color;
 $navbar-default-link-active-color: #ffffff;
+
+$font-family-sans-serif:  Roboto, "Helvetica Neue", Helvetica, Arial, sans-serif;
+$font-family-serif: Georgia, "Times New Roman";
+//** Default monospace fonts for `<code>`, `<kbd>`, and `<pre>`.
+$font-family-monospace:   Menlo, Monaco, Consolas, "Courier New", monospace;
+$font-family-base:        $font-family-sans-serif
