--- a/app/assets/stylesheets/overrides.css.scss
+++ b/app/assets/stylesheets/overrides.css.scss
@@ -1,11 +1,16 @@
-$navbar-default-bg: #1C1C1C;
+$navbar-default-bg: black;
 $navbar-default-link-active-bg: transparent;
 $navbar-border-radius: 2px;
 $navbar-default-border: none;
-$navbar-default-link-color: #0EC95C;
-$navbar-default-link-hover-color: lighten($navbar-default-link-color, 30.0%);
-$navbar-default-brand-hover-color: $navbar-default-link-hover-color;
-$navbar-default-link-active-color: #ffffff;
+$navbar-default-link-color: #FCFCFC;
+$navbar-default-brand-color: #0EC95C;
+$navbar-default-link-hover-color: lighten($navbar-default-brand-color, 35.0%);
+$navbar-default-brand-hover-color: lighten($navbar-default-brand-color, 35.0%);
+$navbar-default-link-active-color: #0EC95C;
+
+$body-bg: #FCFCFC;
+$text-color: #000000;
+$link-color: #A84BCA;
 
 $font-family-sans-serif:  Roboto, "Helvetica Neue", Helvetica, Arial, sans-serif;
 $font-family-serif: Georgia, "Times New Roman";
