--- a/app/assets/stylesheets/overrides.css.scss
+++ b/app/assets/stylesheets/overrides.css.scss
@@ -11,6 +11,7 @@ $navbar-default-link-active-color: #0EC95C;
 $body-bg: #FCFCFC;
 $text-color: #000000;
 $link-color: #A84BCA;
+$font-size-base: 18px;
 
 $font-family-sans-serif:  Roboto, "Helvetica Neue", Helvetica, Arial, sans-serif;
 $font-family-serif: Georgia, "Times New Roman";
