add .row to wrap yield

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -7,9 +7,10 @@
     = csrf_meta_tags
   %body
     .container
-      = render "shared/navigation_bar"
-      = render "shared/errors_and_notices"
+      .row
+        = render "shared/navigation_bar"
+        = render "shared/errors_and_notices"
 
-      = yield
+        = yield
 
-      = render "shared/footer"
+        = render "shared/footer"
