updates to footer

--- a/app/views/shared/_footer.html.haml
+++ b/app/views/shared/_footer.html.haml
@@ -1,4 +1,5 @@
-%hr
-%p
-  powered by
-  = link_to "tamatojuice", "http://www.tamatojuice.com"
+%footer
+  %hr
+    .col-md-8
+      powered by
+      = link_to "tamatojuice", "http://www.tamatojuice.com"
