--- a/app/views/devise/registrations/new.html.haml
+++ b/app/views/devise/registrations/new.html.haml
@@ -1,4 +1,4 @@
-%h2 create an account
+%h5 Create an Account
 = form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f|
   - devise_error_messages!
 
@@ -6,50 +6,48 @@
     = f.label :email, class: "sr-only"
     %span{ class: "input-group-addon", id: "email_addon_signup"}
       %span{ class: "glyphicon glyphicon-envelope"}
-    = f.email_field :email, autofocus: true, placeholder: "email", class: "form-control", "aria-describedby" => "email_addon_signup"
-    = f.label :password, class: "sr-only"
-
-  .input-group
-    = f.label :password, class: "sr-only"
-    %span{ class: "input-group-addon", id: "password_addon_signup"}
-      %span{ class: "glyphicon glyphicon-lock"}
-    = f.password_field :password, autocomplete: "off", placeholder: "password - min. 8 characters", class: "form-control", "aria-describedby" => "password_addon_signup"
-
-  .input-group
-    = f.label :password_confirmation, class: "sr-only"
-    %span{ class: "input-group-addon", id: "password_confirmation_addon_signup"}
-      %span{ class: "glyphicon glyphicon-repeat"}
-    = f.password_field :password_confirmation, autocomplete: "off", placeholder: "retype password", class: "form-control", "aria-describedby" => "password_confirmation_addon_signup"
+    = f.email_field :email, autofocus: true, placeholder: "Email", class: "form-control", "aria-describedby" => "email_addon_signup"
 
   .input-group
     = f.label :first_name, class: "sr-only"
     %span{ class: "input-group-addon", id: "first_name_addon_signup"}
       %span{ class: "glyphicon glyphicon-user"}
-    = f.text_field :first_name, placeholder: "first name", class: "form-control", "aria-describedby" => "first_name_addon_signup"
+    = f.text_field :first_name, placeholder: "First Name", class: "form-control", "aria-describedby" => "first_name_addon_signup"
+
+  .input-group
+    = f.label :password, class: "sr-only"
+    %span{ class: "input-group-addon", id: "password_addon_signup"}
+      %span{ class: "glyphicon glyphicon-lock"}
+    = f.password_field :password, autocomplete: "off", placeholder: "Password", class: "form-control", "aria-describedby" => "password_addon_signup"
+
+  .input-group
+    = f.label :password_confirmation, class: "sr-only"
+    %span{ class: "input-group-addon", id: "password_confirmation_addon_signup"}
+      %span{ class: "glyphicon glyphicon-repeat"}
+    = f.password_field :password_confirmation, autocomplete: "off", placeholder: "Retype Password", class: "form-control", "aria-describedby" => "password_confirmation_addon_signup"
 
   .input-group
     = f.label :age, class: "sr-only"
     %span{ class: "input-group-addon", id: "age_addon_signup"}
       %span{ class: "glyphicon glyphicon-time"}
-    = f.number_field :age, min: 1, placeholder: "age", class: "form-control", "aria-describedby" => "age_addon_signup"
+    = f.number_field :age, min: 1, placeholder: "Age", class: "form-control", "aria-describedby" => "age_addon_signup"
 
   .input-group
     = f.label :city, class: "sr-only"
     %span{ class: "input-group-addon", id: "city_addon_signup"}
       %span{ class: "glyphicon glyphicon-home"}
-    = f.text_field :city, placeholder: "city", class: "form-control", "aria-describedby" => "city_addon_signup"
+    = f.text_field :city, placeholder: "City", class: "form-control", "aria-describedby" => "city_addon_signup"
 
   .input-group
     = f.label :country, class: "sr-only"
     %span{ class: "input-group-addon", id: "country_addon_signup"}
       %span{ class: "glyphicon glyphicon-flag"}
-    = country_select(:user, :country, { priority_countries: ["US"], prompt: "select country" }, { class: "form-control", "aria-describedby" => "country_addon_signup" })
-
+    = country_select(:user, :country, { priority_countries: ["US"], prompt: "Country" }, { class: "form-control", "aria-describedby" => "country_addon_signup" })
+  %br
   .input-group
-    = f.label :accepts_age_agreement, class: "sr-only"
     = f.check_box :accepts_age_agreement
-    By checking this box, you certify that you are over the age of 18.
+    = f.label :accepts_age_agreement, "By checking this box, you certify that you are over the age of 18."
 
   .input-group
-    = f.submit "Sign up"
+    = f.submit "Sign Up"
 = render "devise/shared/links"
