add class to button for javascript

--- a/app/views/devise/registrations/new.html.haml
+++ b/app/views/devise/registrations/new.html.haml
@@ -56,5 +56,5 @@
       = f.check_box :accepts_age_agreement
       = f.label :accepts_age_agreement, " By checking this box, you certify that you are over the age of 18."
   
-  = f.submit "Sign Up", class: "btn btn-primary"
+  = f.submit "Sign Up", class: "btn btn-primary sign-up"
 = render "devise/shared/links"
