--- a/app/views/shared/_sign_in_dropdown.html.haml
+++ b/app/views/shared/_sign_in_dropdown.html.haml
@@ -1,6 +1,6 @@
 %li{ class: "dropdown", role: "presentation" }
   %a{ class: "dropdown-toggle", "data-toggle" => "dropdown", href: "#", role: "button", "aria-expanded" => false}
-    Log In / Sign Up
+    Log In
     %span{class: "caret"}
   %ul{ class: "dropdown-menu dropdown-menu-right has-form", role: "menu" }
     = form_for(resource, as: resource_name, url: session_path(resource_name), html: { id: "login_nav_bar" }) do |f|
