--- a/app/assets/stylesheets/overrides.css.scss
+++ b/app/assets/stylesheets/overrides.css.scss
@@ -7,7 +7,7 @@ $navbar-default-brand-color: #0EC95C;
 $navbar-default-link-hover-color: lighten($navbar-default-brand-color, 35.0%);
 $navbar-default-brand-hover-color: lighten($navbar-default-brand-color, 35.0%);
 $navbar-default-link-active-color: #0EC95C;
-
+$dropdown-bg: #FCFCFC;
 $body-bg: #FCFCFC;
 $text-color: #000000;
 $link-color: #A84BCA;
