updates to stylesheet concerning dropdown

--- a/app/assets/stylesheets/dropdown.css.scss
+++ b/app/assets/stylesheets/dropdown.css.scss
@@ -1,4 +1,8 @@
 .dropdown-menu.has-form {
-    width: 300px !important;
-    height: 250px !important;
+  width: 350px !important;
+  height: 320px !important;
+}
+.dropdown-div {
+  width:300px;
+  margin: 0px 25px;
 }
