extras.css.scss imported by application, styling for image background div

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -4,7 +4,7 @@
 @import "bootstrap";
 @import "errors";
 @import "dropdown";
-
+@import "extras";
 /*
  * This is a manifest file that'll be compiled into application.css, which will include all the files
  * listed below.
