--- a/app/views/shared/_sign_in_dropdown.html.haml
+++ b/app/views/shared/_sign_in_dropdown.html.haml
@@ -10,14 +10,14 @@
         .input-group.input-group-sm
           %span{ class: "input-group-addon", id: "email_addon_login"}
             %span{ class: "glyphicon glyphicon-envelope"}
-          = f.email_field :email, autofocus: true, placeholder: "email", class: "form-control", id: "email_login_navbar", "aria-describedby" => "email_addon_login"
+          = f.email_field :email, autofocus: true, placeholder: "Email", class: "form-control", id: "email_login_navbar", "aria-describedby" => "email_addon_login"
           
       .form-group.dropdown-div
         = f.label :password
         .input-group.input-group-sm
           %span{ class: "input-group-addon", id: "password_addon_login"}
             %span{ class: "glyphicon glyphicon-lock"}
-          = f.password_field :password, autocomplete: "off", placeholder: "password", class: "form-control", id: "password_login_navbar", "aria-describedby" => "password_addon_login"
+          = f.password_field :password, autocomplete: "off", placeholder: "Password", class: "form-control", id: "password_login_navbar", "aria-describedby" => "password_addon_login"
 
       - if devise_mapping.rememberable?
         .form-group.dropdown-div
