change undeleted scope to active

--- a/app/views/static_pages/meet.html.haml
+++ b/app/views/static_pages/meet.html.haml
@@ -1,4 +1,4 @@
-%p MEET the oh-so-dreamy Sherny Weiner Boy Baldissero
+%h5 Meet the oh-so-dreamy Sherny Weiner Boy Baldissero
 
 - @shawns_feed.each do |ig_object|
   - if ig_object.has_key?("videos")
