--- a/app/views/static_pages/faq.html.haml
+++ b/app/views/static_pages/faq.html.haml
@@ -1,3 +1,3 @@
-%p FAQ
+%h5 FAQ
 %p What if I'm not 18, or if I want lessons for my children?
 %p If you want to purchase lessons but are under the age of 18, you must have your legal parent/guardian create a guitarlessons.com account in their name. They can then purchase lessons with you as the registered student.
