--- a/app/views/devise/shared/_links.html.haml
+++ b/app/views/devise/shared/_links.html.haml
@@ -11,3 +11,6 @@
 - if devise_mapping.registerable? && controller_name != 'registrations'
   = link_to "Don't have an account?", new_registration_path(resource_name)
   %br
+
+- if devise_mapping.confirmable? && controller_name != 'confirmations'
+  = link_to "Didn't receive confirmation instructions?", new_confirmation_path(resource_name)
